...
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/place_holder_profile"
...
                android:hint="Full Name"
                android:inputType="textAutoComplete"
                android:textColor="@color/white"
                android:textColorHint="@color/quantum_grey"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/personalityTypeEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

            <!-- Personality Type -->
            <EditText
...
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hobbiesEditText" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button"
                android:text="Save"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toStartOf="@id/cancelButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLine2" />

            <!-- Cancel Button -->
            <Button
                android:id="@+id/cancelButton"
...
